--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,15 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+# Idea project files
+
+.idea
+
+# Apple env files
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+
+
